Bug 365651 - selecting a file opens it immediately with application
Summary: selecting a file opens it immediately with application
Status: RESOLVED FIXED
Alias: None
Product: cervisia
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Loose
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-14 08:29 UTC by poldi871
Modified: 2017-03-24 19:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description poldi871 2016-07-14 08:29:50 UTC
Version: Cervisia 3.10.0 and former
OS: OpenSuSE leap - latest version (online-update)
When a file is selected, it is opened immediately with the corresponding application. This makes it impossible to select several files without closing the corresponding application with each file. 
Additional Info: I'm working with "one click open" for files in plasma.
I do this also in older versions of KDE, e.g. OpenSuSE 12.2 and there it works perfectly.

Reproducible: Always

Steps to Reproduce:
1. Open Repository
2.click on a file entry
3.

Actual Results:  
see above

Expected Results:  
It should only select the entry, not open the file with the corresponding application
Comment 1 poldi871 2016-12-09 09:45:18 UTC
nobody cares
Comment 2 Martin Koller 2017-03-12 15:58:32 UTC
You selected to open a file with a single click in system settings, and that is what it does (and btw. dolphin works the same way. I know that dolphin has a special way to exactly work around this "problem" with this extra +/- icons where you can select/deselect an item).
If I would change the cervisia tree to "just select on single click, open on double-click" then this would be inconsistent with the rest of the system, don't you think so ?
Comment 3 poldi871 2017-03-24 17:55:41 UTC
yes, that's correct, but it's very annoying, if I want to checkin a couple of files at once. For every entry I have to close the assigned application window first. I've not yet found a way to prevent that.
Comment 4 poldi871 2017-03-24 18:04:38 UTC
(In reply to Martin Koller from comment #2)
> You selected to open a file with a single click in system settings, and that
> is what it does (and btw. dolphin works the same way. I know that dolphin
> has a special way to exactly work around this "problem" with this extra +/-
> icons where you can select/deselect an item).
> If I would change the cervisia tree to "just select on single click, open on
> double-click" then this would be inconsistent with the rest of the system,
> don't you think so ?

Sorry, didn't see the reply button:
yes, that's correct, but it's very annoying, if I want to checkin a couple of files at once. For every entry I have to close the assigned application window first. I've not yet found a way to prevent that.
I enjoy the way the system works with single clicks at "normal" work. And I enjoyed that behaviour very much in old KDE ("normal" work -> one click opens the application <-> one click in cervisia -> file is only seleced).
Comment 5 Martin Koller 2017-03-24 19:34:00 UTC
Git commit 0f1b61196f1c9f01621dd40d97cd177daf6f1ff3 by Martin Koller.
Committed on 24/03/2017 at 19:32.
Pushed by mkoller into branch 'master'.

open a file only on doubleclick

M  +1    -1    updateview.cpp

https://commits.kde.org/cervisia/0f1b61196f1c9f01621dd40d97cd177daf6f1ff3
Comment 6 Martin Koller 2017-03-24 19:40:33 UTC
Git commit 2aa38f14615861cc52e836f15be0f259c8433ec6 by Martin Koller.
Committed on 24/03/2017 at 19:40.
Pushed by mkoller into branch 'Applications/17.04'.

open a file only on doubleclick

M  +1    -1    updateview.cpp

https://commits.kde.org/cervisia/2aa38f14615861cc52e836f15be0f259c8433ec6