open a file only on doubleclick

BUG: 365651